# Munshot-AI-Challenge

./: .gitignore  README.md  bulk_reviews.py  dashboard.py  db.py  insights.py  main.py  process.py  pyproject.toml  scraper.py
data/: asins_by_brand.json  luggage.db
data/raw/: american_tourister_products.json  american_tourister_reviews.json  aristocrat_products.json  aristocrat_reviews.json  nasher_miles_products.json  nasher_miles_reviews.json  safari_products.json  safari_reviews.json  skybags_products.json  skybags_reviews.json  vip_products.json  vip_reviews.json
