[project]
name = "moonshot-challenge"
version = "0.1.0"
description = "Competitive intelligence dashboard for luggage brands on Amazon India"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pandas>=2.2",
    "vadersentiment>=3.3",
    "keybert>=0.8",
    "sentence-transformers>=3.0",
    "streamlit>=1.35",
    "plotly>=5.22",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
